tests/good/trivial_booleans.lat
int main() {
    if (6 > 3) {

    }

    if (5 + 10 < 3)
    {

    }

    if (10 >= 3)
    {

    }

    if (5 <= 10)
    {

    }

    if (true == true || false)
    {

    }

    if (10 == 5 + 5)
    {

    }

    if (10 != 5 + 5) 
    {
        
    }


    return 0;
}