tests/bad/objects/2.lat
class A {
    int a;
}

class B extends A {
    int a;
}

int main () {
    return 0;
}